--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/main.js",
   "scripts": {
     "start:dev": "nodemon ./src/main.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
