--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "noImplicitThis": false,
     "strictNullChecks": false
   },
-  "include": ["src/**/*", "__tests__/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
